# hiramekin

./: .dockerignore  .env.example  .gitignore  App.tsx  Dockerfile  README.md  app.json  docker-compose.yml  download.html  jest.config.js  jest.setup.js  package-lock.json  package.json  schema.sql  tsconfig.json  vercel.json
.github/workflows/: desktop-build.yml
__tests__/components/: InputArea.test.tsx  KeyboardToolbar.test.tsx  MemoItem.test.tsx  MemoList.test.tsx  SearchBar.test.tsx  VoiceInput.test.tsx
__tests__/hooks/: useCalc.test.ts  useMemos.test.ts  useNotifications.test.ts
__tests__/screens/: SettingsScreen.test.tsx
__tests__/services/: AsyncStorageAdapter.test.ts  IndexedDBAdapter.test.ts  calculator.test.ts  notifications.test.ts
__tests__/utils/: dateTime.test.ts
android/: gradle.properties  settings.gradle
android/app/: build.gradle
docs/: download.md  vercel-deploy.md
docs/release/: v1.0.0-beta.md  v1.0.1-beta.md  v1.0.2-beta.md  v1.0.3-beta.md  v1.0.4-beta.md  v1.0.5-beta.md  v1.0.6-beta.md  v1.0.7-beta.md  v1.0.8-beta.md  v1.0.9-beta.md  v1.0.9-desktop.md
ios/: Podfile
ios/hiramekininit/: Info.plist
ios/hiramekininit.xcodeproj/: project.pbxproj
public/: download.html  latest.json  manifest.json  sw.js
scripts/: publish-github-release.ps1
src/: theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CalcLine.tsx  InputArea.tsx  KeyboardToolbar.tsx  MemoItem.tsx  MemoList.tsx  NotifyPicker.tsx  OverlayApp.tsx  (+4 more)
(+39 files in other folders)
